Trying to fix missing bg image on small screens.

--- a/app/static/styles/cover.css
+++ b/app/static/styles/cover.css
@@ -44,6 +44,7 @@ body {
   -moz-background-size: cover;
   background-size: cover, contain;
   -o-background-size: cover;
+  overflow-y: scroll;
 }
 
 .cover-container {
